<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorRed"
    tools:context=".InversaMatrizMenu">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/chilldren"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/inv22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="inv2x2"
            android:text="@string/invText2x2" />

        <Button
            android:id="@+id/inv33"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="inv3x3"
            android:text="@string/invText3x3" />

        <Button
            android:id="@+id/inv44"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="inv4x4"
            android:text="@string/invText4x4" />
    </LinearLayout>

</RelativeLayout>