<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Determinantes"
    android:background="#9980FA">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/bcdet"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/det_dos_x_dos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/det_dos_dos"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:onClick="det_2x2"/>

        <Button
            android:id="@+id/det_tres_x_tres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/det_tres_x_tres"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:onClick="det_3x3"/>

        <Button
            android:id="@+id/det_cuatro_x_cuatro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/det_cuatro_x_cuatro"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:onClick="det_4x4"/>
    </LinearLayout>
</RelativeLayout>